# architecture-guidelines

./: .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-reusable.yml  governance-baseline.yml  security-reusable.yml  validate-platform.yml
archetypes/: README.md
archetypes/api-dotnet/: README.md  definition.yaml
borgera_cli/: README.md  __main__.py  app.py
changelog/: CHANGELOG.md
cli/: README.md  app.py
docs/: api-dotnet-active-evaluation-2026-03-19.md  archetype-lifecycle.md  baseline-2026-03-19.md  branch-protection.md  cicd.md  cli-contract.md  git-branching-and-release-flow.md  git-repository-workflow.md  golden-path.md  governanca.md  governance.md  index.md  policy-levels.md  post-processing-contract.md  principios.md  repository-purpose.md  rollback.md  rollout.md  seguranca.md  smoke-test.md  versionamento.md
docs/adrs/: adr-template.md
examples/: README.md
examples/api-dotnet/: README.md
examples/api-dotnet/minimal-default/: README.md  manifest.yaml
schemas/: archetype.schema.json  example-manifest.schema.json  post-processing.schema.json
scripts/: README.md  smoke_test_cli.py  validate_archetypes.py  validate_example.py
templates/: README.md
templates/api-project/: README.md  payload.md
templates/docker-files/: README.md  payload.md
templates/dotnet-solution/: README.md  payload.md
templates/node-consumer/: .arch-guidelines.yml  README.md
templates/repository-files/: README.md  payload.md
templates/test-project/: README.md  payload.md
(+30 files in other folders)
