[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "architecture-guidelines-cli"
version = "0.1.0"
description = "Reference CLI for the architecture-guidelines contract repository."
readme = "cli/README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "jsonschema>=4.0",
]

[project.scripts]
ag = "cli.app:main"

[tool.setuptools.packages.find]
include = ["cli"]
