[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "borgera-cli"
version = "0.1.0"
description = "Reference CLI for the architecture-guidelines contract repository."
readme = "borgera_cli/README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "jsonschema>=4.0",
]

[project.scripts]
borgera = "borgera_cli.app:main"

[tool.setuptools.packages.find]
include = ["borgera_cli"]
